--- a/package.json
+++ b/package.json
@@ -16,16 +16,19 @@
     "@angular/common": "~10.1.6",
     "@angular/compiler": "~10.1.6",
     "@angular/core": "~10.1.6",
+    "@angular/fire": "^6.0.4",
     "@angular/forms": "~10.1.6",
     "@angular/material": "^11.2.13",
     "@angular/platform-browser": "~10.1.6",
     "@angular/platform-browser-dynamic": "~10.1.6",
     "@angular/router": "~10.1.6",
     "bootstrap": "^4.0.0-alpha.6",
+    "firebase": "^8.10.1",
     "hammerjs": "^2.0.8",
     "npx": "^10.2.2",
     "react-bootstrap": "^0.32.1",
     "rxjs": "~6.6.0",
+    "sweetalert2": "^11.4.4",
     "tslib": "^2.0.0",
     "zone.js": "~0.10.2"
   },
